# harvest-code

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  default.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yaml
benchmark/: Cargo.toml
benchmark/src/: cli.rs  io.rs  ir_utils.rs  logger.rs  main.rs  runner.rs  stats.rs
benchmark/src/harness/: mod.rs
benchmark_harness/: Cargo.toml
benchmark_harness/src/: cli.rs  error.rs  io.rs  ir_utils.rs  logger.rs  logging.rs  main.rs  runner.rs  stats.rs
benchmark_harness/src/harness/: mod.rs
doc/: AddingTools.md  Benchmark.md  Configuration.md  HARVEST-Translate Design.md
fs/: Cargo.toml
fs/src/: lib.rs  try1.rs
ir/: Cargo.toml
ir/src/: c2rust_c_ast.rs  c_ast.rs  edit.rs  fs.rs  id.rs  lib.rs  raw_source.rs
nightly/: rust-toolchain.toml
struct_selection/: Cargo.toml  spec.md
struct_selection/src/: abstractops.rs  cost.rs  lib.rs  main.rs  rustbackends.rs
struct_selection/tests/: integration_tests.rs
tools/identify_project_kind/: Cargo.toml
tools/identify_project_kind/src/: lib.rs
tools/load_raw_source/: Cargo.toml
tools/load_raw_source/src/: lib.rs
tools/raw_source_to_cargo_llm/: Cargo.toml
tools/raw_source_to_cargo_llm/src/: lib.rs
tools/try_cargo_build/: Cargo.toml
tools/try_cargo_build/src/: lib.rs
translate/: Cargo.toml  default_config.toml
translate/src/: cli.rs  diagnostics.rs  ir_storage.rs  lib.rs  main.rs  runner.rs  scheduler.rs  test_util.rs  tool.rs  util.rs
translate/src/diagnostics/: mod.rs  tool_reporter.rs
translate/src/harvest_ir/: raw_source.rs
translate/src/tools/: identify_project_kind.rs  load_raw_source.rs  mod.rs  raw_source_to_cargo_llm.rs  try_cargo_build.rs  validate_build.rs
translate/src/tools/raw_source_to_cargo_llm/: mod.rs  structured_schema.json  system_prompt.txt  system_prompt_executable.txt  system_prompt_library.txt
