[workspace]
members = [ "benchmark", "ir","translate" ]
resolver = "3"

[workspace.dependencies]
harvest_ir = { path = "ir" }
harvest_translate = { path = "translate" }
tempfile = "3.23.0"
thiserror = "2.0.17"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"

[workspace.lints.clippy]
self_named_module_files = "warn"
