[package]
name = "harvest-benchmark"
version = "0.1.0"
edition = "2021"
description = "Runs a set of benchmarks and provides useful output"
license = "MIT"

[[bin]]
name = "benchmark"
path = "src/main.rs"


[dependencies]
harvest_ir = { workspace = true }
harvest_translate = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
walkdir = "2.0"
csv = "1.3"
regex = "1.12.2"
wait-timeout = "0.2"
