[package]
name = "harvest_ir"
version = "0.1.0"
edition = "2024"

[dependencies]
c2rust-ast-exporter = { version = "0.20.0", features = ["llvm-static"] }
c2rust-transpile = { version = "0.20.0", features = ["llvm-static"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempdir = "0.3.7"

[dev-dependencies]
tempdir = "0.3.7"
