[package]
name = "harvest_translate"
version = "0.1.0"
edition = "2024"

[lib]
name = "harvest_translate"
path = "src/lib.rs"

[[bin]]
name = "translate"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.23.0"
clap = { workspace = true }
config = { default-features = false, features = ["toml"], version = "0.15.18" }
directories = "6.0.0"
env_logger = "0.11.8"
harvest_ir = { workspace = true }
llm = { default-features = false, features = ["ollama", "openai", "openrouter", "rustls-tls" ], version = "1.3.4" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { features = ["net", "rt"], version = "1.47.1" }

[lints]
workspace = true
