[package]
name = "harvest_translate"
version = "0.1.0"
edition = "2024"

[lib]
name = "harvest_translate"
path = "src/lib.rs"

[[bin]]
name = "translate"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
config = { default-features = false, features = ["toml"], version = "0.15.18" }
directories = "6.0.0"
env_logger = "0.11.8"
libc = "0.2.177"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

harvest_ir = { workspace = true }
load_raw_source = { version = "0.1.0", path = "../tools/load_raw_source" }
identify_project_kind = { version = "0.1.0", path = "../tools/identify_project_kind" }
raw_source_to_cargo_llm = { version = "0.1.0", path = "../tools/raw_source_to_cargo_llm" }
try_cargo_build = { version = "0.1.0", path = "../tools/try_cargo_build" }

[lints]
workspace = true
