[package]
name = "raw_source_to_cargo_llm"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
harvest_ir.workspace = true
serde_json.workspace = true
tokio = { features = ["net", "rt"], version = "1.47.1" }
serde = { workspace = true, features = ["derive"] }
llm = { default-features = false, features = ["ollama", "openai", "openrouter", "rustls-tls" ], version = "1.3.4" }
load_raw_source = { version = "0.1.0", path = "../load_raw_source" }
identify_project_kind = { version = "0.1.0", path = "../identify_project_kind" }

[lints]
workspace = true
